[package]
name = "ruxgo"
version = "0.8.0"
edition = "2021"
authors = ["Zewei Yang <beichen@stu.pku.edu.cn>"]
description = "A Cargo-like build tool for building C and C++ applications"
homepage = "https://github.com/Ybeichen/ruxgo"
repository = "https://github.com/Ybeichen/ruxgo"
keywords = ["toml", "build-tool", "c++", "c", "rust"]

[dependencies]
toml = "0.7.2"
colored = "2.0.0"
itertools="0.10.5"
sha1 = "0.10.5"
rayon = "1.7.0"
indicatif = "0.17.3"
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.190", features = ["derive"] }