[package]
name = "ruxgo"
version = "0.8.9"
edition = "2021"
authors = ["Zewei Yang <beichen@stu.pku.edu.cn>"]
description = "A Cargo-like build tool for building C and C++ applications"
homepage = "https://github.com/syswonder/ruxgo"
repository = "https://github.com/syswonder/ruxgo"
documentation = "https://syswonder.github.io/ruxgo/"
keywords = ["toml", "build-tool", "c++", "c", "rust"]

[dependencies]
toml = "0.7.2"
colored = "2.0.0"
itertools="0.10.5"
sha1 = "0.10.6"
rayon = "1.7.0"
indicatif = "0.17.3"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11.0"
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.5.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"